--- a/WordPress/Classes/ViewRelated/Comments/CommentContentTableViewCell.xib
+++ b/WordPress/Classes/ViewRelated/Comments/CommentContentTableViewCell.xib
@@ -30,15 +30,15 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="CzL-pe-Tnr">
-                                <rect key="frame" x="48" y="20" width="240" height="31"/>
+                                <rect key="frame" x="48" y="20" width="208" height="31"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HpE-B7-6wr" userLabel="Name Label">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="14.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="208" height="14.5"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ghT-Xy-q8c" userLabel="Date Label">
-                                        <rect key="frame" x="0.0" y="16.5" width="240" height="14.5"/>
+                                        <rect key="frame" x="0.0" y="16.5" width="208" height="14.5"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                         <nil key="highlightedColor"/>
@@ -54,7 +54,7 @@
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="tintColor" systemColor="secondaryLabelColor"/>
                                 <state key="normal">
-                                    <imageReference key="image" image="square.and.arrow.up" catalog="system" renderingMode="template"/>
+                                    <imageReference key="image" image="square.and.arrow.up" catalog="system" symbolScale="large" renderingMode="template"/>
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font" scale="large">
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                     </preferredSymbolConfiguration>
@@ -64,10 +64,11 @@
                         <constraints>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="CzL-pe-Tnr" secondAttribute="bottom" constant="15" id="FLO-bi-cgb"/>
                             <constraint firstItem="CzL-pe-Tnr" firstAttribute="top" secondItem="9QY-3I-cxv" secondAttribute="top" id="Fs5-LK-eAC"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="CzL-pe-Tnr" secondAttribute="trailing" id="R3L-jf-zLP"/>
                             <constraint firstAttribute="bottom" secondItem="9QY-3I-cxv" secondAttribute="bottom" priority="750" constant="15" id="S4y-cM-fX9"/>
                             <constraint firstItem="9QY-3I-cxv" firstAttribute="top" secondItem="f2E-yC-BJS" secondAttribute="top" constant="20" id="VRu-Tu-EzK"/>
-                            <constraint firstAttribute="trailing" secondItem="CzL-pe-Tnr" secondAttribute="trailing" id="h7s-ea-f1U"/>
                             <constraint firstItem="1G8-cc-t5d" firstAttribute="centerY" secondItem="9QY-3I-cxv" secondAttribute="centerY" id="iiu-dq-fba"/>
+                            <constraint firstItem="1G8-cc-t5d" firstAttribute="leading" secondItem="CzL-pe-Tnr" secondAttribute="trailing" id="kMf-Ux-GI7"/>
                             <constraint firstItem="9QY-3I-cxv" firstAttribute="leading" secondItem="f2E-yC-BJS" secondAttribute="leading" id="mzW-Rh-t4b"/>
                             <constraint firstItem="CzL-pe-Tnr" firstAttribute="top" relation="greaterThanOrEqual" secondItem="f2E-yC-BJS" secondAttribute="top" constant="20" id="pAn-nJ-PTk"/>
                             <constraint firstItem="CzL-pe-Tnr" firstAttribute="leading" secondItem="9QY-3I-cxv" secondAttribute="trailing" constant="10" id="shs-JU-Qg8"/>
@@ -88,7 +89,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ta5-Cz-flw" userLabel="Reaction Bar View">
                         <rect key="frame" x="16" y="206" width="288" height="41"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VoI-YI-Qgc">
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VoI-YI-Qgc" userLabel="Reply Button">
                                 <rect key="frame" x="0.0" y="0.0" width="62.5" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                 <color key="tintColor" systemColor="secondaryLabelColor"/>
@@ -102,7 +103,7 @@
                                     </preferredSymbolConfiguration>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X2J-8b-R5F">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X2J-8b-R5F" userLabel="Like Button">
                                 <rect key="frame" x="62.5" y="0.0" width="78.5" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                 <color key="tintColor" systemColor="secondaryLabelColor"/>
@@ -110,7 +111,7 @@
                                 <inset key="titleEdgeInsets" minX="2" minY="0.0" maxX="-2" maxY="0.0"/>
                                 <state key="normal" title="Like">
                                     <color key="titleColor" systemColor="secondaryLabelColor"/>
-                                    <imageReference key="image" image="star" catalog="system" symbolScale="default" renderingMode="template"/>
+                                    <imageReference key="image" image="star" catalog="system" symbolScale="medium" renderingMode="template"/>
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font" scale="small">
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                     </preferredSymbolConfiguration>
@@ -119,13 +120,14 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="X2J-8b-R5F" firstAttribute="centerY" secondItem="VoI-YI-Qgc" secondAttribute="centerY" id="5BN-aB-7zN"/>
+                            <constraint firstItem="X2J-8b-R5F" firstAttribute="top" secondItem="ta5-Cz-flw" secondAttribute="top" id="2nT-bm-PdY"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="X2J-8b-R5F" secondAttribute="trailing" id="BaU-wG-gvI"/>
                             <constraint firstItem="X2J-8b-R5F" firstAttribute="leading" secondItem="VoI-YI-Qgc" secondAttribute="trailing" id="EB0-u1-7Tg"/>
                             <constraint firstItem="VoI-YI-Qgc" firstAttribute="top" secondItem="ta5-Cz-flw" secondAttribute="top" id="Nec-gq-oLP"/>
                             <constraint firstAttribute="bottom" secondItem="VoI-YI-Qgc" secondAttribute="bottom" id="OHA-JJ-O5q"/>
+                            <constraint firstItem="X2J-8b-R5F" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ta5-Cz-flw" secondAttribute="leading" id="Vix-Nc-fT5"/>
                             <constraint firstItem="VoI-YI-Qgc" firstAttribute="leading" secondItem="ta5-Cz-flw" secondAttribute="leading" id="eiP-L2-BU6"/>
-                            <constraint firstItem="X2J-8b-R5F" firstAttribute="top" secondItem="VoI-YI-Qgc" secondAttribute="top" id="enj-j2-HQw"/>
+                            <constraint firstAttribute="bottom" secondItem="X2J-8b-R5F" secondAttribute="bottom" id="kdD-9h-GEp"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -136,6 +138,7 @@
                     <constraint firstAttribute="trailingMargin" secondItem="ta5-Cz-flw" secondAttribute="trailing" id="Dto-vA-zSP"/>
                     <constraint firstItem="ta5-Cz-flw" firstAttribute="top" secondItem="Je0-5Q-ty6" secondAttribute="bottom" id="GI1-Oo-Z1Z"/>
                     <constraint firstAttribute="bottom" secondItem="ta5-Cz-flw" secondAttribute="bottom" id="Kqb-UN-FZi"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Je0-5Q-ty6" secondAttribute="bottom" constant="10" id="L9y-c0-7zu"/>
                     <constraint firstAttribute="trailingMargin" secondItem="f2E-yC-BJS" secondAttribute="trailing" id="jwQ-Hk-yip"/>
                     <constraint firstItem="Je0-5Q-ty6" firstAttribute="top" secondItem="f2E-yC-BJS" secondAttribute="bottom" id="kLg-9V-Ao1"/>
                     <constraint firstAttribute="leadingMargin" secondItem="Je0-5Q-ty6" secondAttribute="leading" id="kQZ-G5-oNs"/>
@@ -143,6 +146,16 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="accessoryButton" destination="1G8-cc-t5d" id="kLS-Ag-hAG"/>
+                <outlet property="avatarImageView" destination="9QY-3I-cxv" id="lbp-Hv-zRm"/>
+                <outlet property="dateLabel" destination="ghT-Xy-q8c" id="ffa-qV-3tn"/>
+                <outlet property="likeButton" destination="X2J-8b-R5F" id="6w2-io-GXb"/>
+                <outlet property="nameLabel" destination="HpE-B7-6wr" id="MLa-k9-IlC"/>
+                <outlet property="reactionBarView" destination="ta5-Cz-flw" id="puY-Sa-fKk"/>
+                <outlet property="replyButton" destination="VoI-YI-Qgc" id="Z9J-Tp-bur"/>
+                <outlet property="webView" destination="Je0-5Q-ty6" id="YaD-wp-E6W"/>
+            </connections>
             <point key="canvasLocation" x="131.8840579710145" y="279.57589285714283"/>
         </tableViewCell>
     </objects>
