--- a/WordPress/Resources/HTML/richCommentStyle.css
+++ b/WordPress/Resources/HTML/richCommentStyle.css
@@ -83,6 +83,27 @@ img.emoji {
     max-width: 1rem;
 }
 
+ul.blocks-gallery-grid {
+    list-style-type: none;
+    margin: auto 0;
+    padding: 0;
+    max-width: 100vw;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.blocks-gallery-item {
+    max-width: 50vw;
+}
+
+.blocks-gallery-item img {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
 /** BLOCKQUOTES **/
 
 blockquote {
