--- a/WordPress/Classes/ViewRelated/Comments/CommentContentTableViewCell.xib
+++ b/WordPress/Classes/ViewRelated/Comments/CommentContentTableViewCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="112" id="KGk-i7-Jjw" customClass="CommentContentTableViewCell" customModule="WordPress" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="91" id="KGk-i7-Jjw" customClass="CommentContentTableViewCell" customModule="WordPress" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="f2E-yC-BJS" userLabel="Header View">
-                        <rect key="frame" x="16" y="0.0" width="288" height="71"/>
+                        <rect key="frame" x="16" y="0.0" width="288" height="75"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gravatar" translatesAutoresizingMaskIntoConstraints="NO" id="9QY-3I-cxv" userLabel="Avatar Image View" customClass="CircularImageView" customModule="WordPress" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="38" height="38"/>
@@ -45,7 +45,7 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1G8-cc-t5d" userLabel="Accessory Button">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1G8-cc-t5d" userLabel="Accessory Button">
                                 <rect key="frame" x="256" y="17" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="1G8-cc-t5d" secondAttribute="height" multiplier="1:1" id="1CB-OD-6k3"/>
@@ -75,8 +75,8 @@
                             <constraint firstAttribute="trailing" secondItem="1G8-cc-t5d" secondAttribute="trailing" constant="-12" id="xTt-ug-Tgu"/>
                         </constraints>
                     </view>
-                    <wkWebView contentMode="scaleToFill" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="Je0-5Q-ty6">
-                        <rect key="frame" x="16" y="71" width="288" height="1"/>
+                    <wkWebView contentMode="scaleToFill" verticalHuggingPriority="252" translatesAutoresizingMaskIntoConstraints="NO" id="Je0-5Q-ty6">
+                        <rect key="frame" x="16" y="75" width="288" height="1"/>
                         <constraints>
                             <constraint firstAttribute="height" priority="999" constant="1" id="dGD-8Q-LSr"/>
                         </constraints>
@@ -85,14 +85,14 @@
                             <wkPreferences key="preferences"/>
                         </wkWebViewConfiguration>
                     </wkWebView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ta5-Cz-flw" userLabel="Reaction Bar View">
-                        <rect key="frame" x="16" y="72" width="288" height="40"/>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ta5-Cz-flw" userLabel="Reaction Bar View">
+                        <rect key="frame" x="16" y="76" width="288" height="15"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VoI-YI-Qgc" userLabel="Reply Button">
-                                <rect key="frame" x="0.0" y="0.0" width="62.5" height="40"/>
+                                <rect key="frame" x="0.0" y="0.0" width="62.5" height="15"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                 <color key="tintColor" systemColor="secondaryLabelColor"/>
-                                <inset key="contentEdgeInsets" minX="0.0" minY="15" maxX="15" maxY="10"/>
+                                <inset key="contentEdgeInsets" minX="0.0" minY="10" maxX="15" maxY="15"/>
                                 <inset key="titleEdgeInsets" minX="2" minY="0.0" maxX="-2" maxY="0.0"/>
                                 <state key="normal" title="Reply">
                                     <color key="titleColor" systemColor="secondaryLabelColor"/>
@@ -103,10 +103,10 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X2J-8b-R5F" userLabel="Like Button">
-                                <rect key="frame" x="62.5" y="0.0" width="78.5" height="40"/>
+                                <rect key="frame" x="62.5" y="0.0" width="78.5" height="15"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                 <color key="tintColor" systemColor="secondaryLabelColor"/>
-                                <inset key="contentEdgeInsets" minX="5" minY="15" maxX="35" maxY="10"/>
+                                <inset key="contentEdgeInsets" minX="5" minY="10" maxX="35" maxY="15"/>
                                 <inset key="titleEdgeInsets" minX="2" minY="0.0" maxX="-2" maxY="0.0"/>
                                 <state key="normal" title="Like">
                                     <color key="titleColor" systemColor="secondaryLabelColor"/>
@@ -137,7 +137,7 @@
                     <constraint firstAttribute="trailingMargin" secondItem="ta5-Cz-flw" secondAttribute="trailing" id="Dto-vA-zSP"/>
                     <constraint firstItem="ta5-Cz-flw" firstAttribute="top" secondItem="Je0-5Q-ty6" secondAttribute="bottom" id="GI1-Oo-Z1Z"/>
                     <constraint firstAttribute="bottom" secondItem="ta5-Cz-flw" secondAttribute="bottom" id="Kqb-UN-FZi"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Je0-5Q-ty6" secondAttribute="bottom" constant="10" id="L9y-c0-7zu"/>
+                    <constraint firstAttribute="bottom" secondItem="Je0-5Q-ty6" secondAttribute="bottom" constant="15" id="L9y-c0-7zu"/>
                     <constraint firstAttribute="trailingMargin" secondItem="f2E-yC-BJS" secondAttribute="trailing" id="jwQ-Hk-yip"/>
                     <constraint firstItem="Je0-5Q-ty6" firstAttribute="top" secondItem="f2E-yC-BJS" secondAttribute="bottom" id="kLg-9V-Ao1"/>
                     <constraint firstAttribute="leadingMargin" secondItem="Je0-5Q-ty6" secondAttribute="leading" id="kQZ-G5-oNs"/>
@@ -154,9 +154,10 @@
                 <outlet property="reactionBarView" destination="ta5-Cz-flw" id="puY-Sa-fKk"/>
                 <outlet property="replyButton" destination="VoI-YI-Qgc" id="Z9J-Tp-bur"/>
                 <outlet property="webView" destination="Je0-5Q-ty6" id="YaD-wp-E6W"/>
+                <outlet property="webViewBottomConstraint" destination="L9y-c0-7zu" id="uV4-PV-OAt"/>
                 <outlet property="webViewHeightConstraint" destination="dGD-8Q-LSr" id="rBk-4R-GCz"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="234.375"/>
+            <point key="canvasLocation" x="131.8840579710145" y="227.34375"/>
         </tableViewCell>
     </objects>
     <resources>
